Archive2/d9/4f4486c2d06ffa/output
main.cpp: In instantiation of 'void f(T) [with NoExplicit = int; T = int]':
main.cpp:11:13:   required from here
main.cpp:6:13: error: static assertion failed: fuck off
 void f(T) { static_assert(std::is_same<NoExplicit, detail::secret>(), "fuck off"); /* ... */ }
             ^
24541
